# size_preserving_podcast_splicer

./: .dockerignore  .gitignore  LICENSE  README.md  audio_splicer.py  dockerfile  fly.toml  main.py  media.py  media_loader.py  pyproject.toml
app/: __init__.py  main.py
app/size_preserving_podcast_splicer/: __init__.py  audio_splicer.py  media_loader.py
static/: index.html
