[project]
name = "size-preserving-podcast-splicer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "feedgen>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "mutagen>=1.47.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.14.1",
    "pydub-stubs>=0.25.1.5",
]
